--- a/webroot/index.html
+++ b/webroot/index.html
@@ -10,9 +10,9 @@
 		<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
 		<script type="text/javascript">
 			function initialize() {
-				var latlng = new google.maps.LatLng(48.51, 2.21);
+				var latlng = new google.maps.LatLng(48.85790014566900000, 2.34716868082870000);
 				var myOptions = {
-					zoom: 8,
+					zoom: 13,
 					center: latlng,
 					mapTypeId: google.maps.MapTypeId.ROADMAP
 				};
