--- a/webroot/index.html
+++ b/webroot/index.html
@@ -7,7 +7,7 @@
 			body { height: 100%; margin: 0; padding: 0 }
 			#map_canvas { height: 100% }
 		</style>
-		<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
+		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=true"></script>
 		<script type="text/javascript">
 			function initialize() {
 				var latlng = new google.maps.LatLng(48.85790014566900000, 2.34716868082870000);
