--- a/webroot/index.html
+++ b/webroot/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+		<meta name="viewport" content="initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0" />
 		<style type="text/css">
 			html { height: 100% }
 			body { height: 100%; margin: 0; padding: 0 }
