--- a/webroot/index.html
+++ b/webroot/index.html
@@ -2,25 +2,14 @@
 <html>
 	<head>
 		<meta name="viewport" content="initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0" />
-		<style type="text/css">
-			html { height: 100% }
-			body { height: 100%; margin: 0; padding: 0 }
-			#map_canvas { height: 100% }
-		</style>
-		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=true"></script>
-		<script type="text/javascript">
-			function initialize() {
-				var latlng = new google.maps.LatLng(48.85790014566900000, 2.34716868082870000);
-				var myOptions = {
-					zoom: 13,
-					center: latlng,
-					mapTypeId: google.maps.MapTypeId.ROADMAP
-				};
-				var map = new google.maps.Map(document.getElementById("map_canvas"), myOptions);
-			}
-		</script>
+		<link href="css/style.css" media="screen" rel="stylesheet" type="text/css" />
 	</head>
-	<body onload="initialize()">
+	
+	<body>
 		<div id="map_canvas" style="width:100%; height:100%"></div>
 	</body>
+	
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
+	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=true"></script>
+	<script type="text/javascript" src="js/script.js"></script>
 </html>
