--- a/webroot/index.html
+++ b/webroot/index.html
@@ -10,6 +10,7 @@
 	</body>
 	
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
+	<script type="text/javascript" src="js/vendors/underscore.js"></script>
 	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=true"></script>
 	<script type="text/javascript" src="js/script.js"></script>
 </html>
