--- a/webroot/index.html
+++ b/webroot/index.html
@@ -13,4 +13,5 @@
 	<script type="text/javascript" src="js/vendors/underscore.js"></script>
 	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=true"></script>
 	<script type="text/javascript" src="js/script.js"></script>
+	<script type="text/javascript" src="js/geoloc.js"></script>
 </html>
