--- a/webroot/index.html
+++ b/webroot/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="UTF-8" />
+		<title>HackDay Petite Salle's Project</title>
+		<link rel="shortcut icon" type="image/png" href="img/eye.png" />
 		<meta name="viewport" content="initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0" />
 		<link href="css/style.css" media="screen" rel="stylesheet" type="text/css" />
 	</head>
