--- a/webroot/index.html
+++ b/webroot/index.html
@@ -6,11 +6,16 @@
 	</head>
 	
 	<body>
-		<div id="map_canvas" style="width:100%; height:100%"></div>
+		<div id="canvas" style="width:100%; height:100%"></div>
 	</body>
 	
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
 	<script type="text/javascript" src="js/vendors/underscore.js"></script>
+	<script type="text/javascript" src="js/vendors/backbone.js"></script>
 	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=true"></script>
 	<script type="text/javascript" src="js/script.js"></script>
+	<script type="text/javascript" src="js/app.js"></script>
+	<script type="text/javascript" src="js/user.js"></script>
+	<script type="text/javascript" src="js/map.js"></script>
+	<script type="text/javascript" src="js/camera.js"></script>
 </html>
