--- a/webroot/index.html
+++ b/webroot/index.html
@@ -17,4 +17,5 @@
 	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=true&language=fr&region=FR"></script>
 	<script type="text/javascript" src="js/script.js"></script>
 	<script type="text/javascript" src="js/geoloc.js"></script>
+	<script type="text/javascript" src="js/timeline.js"></script>
 </html>
