--- a/webroot/index.html
+++ b/webroot/index.html
@@ -9,8 +9,34 @@
 	</head>
 	
 	<body>
-	    <a id="startButton" href="#" onclick="initMapsEtc();">Start!</a>
+	    <a id="startButton" href="#" onclick="initAllTheThings();">Start!</a>
 		<div id="map_canvas"></div>
+		<div id="infoPanel">
+		    <div id="head">Informations:</div>
+            <div id="publicInfo">
+                <em>Total</em>
+                <ul>
+                <li><em>Time:</em> <span id="totalTime">0</span></li>
+                <li><em>Distance:</em> <span id="totalDistance">0</span></li>
+            </ul>
+            <div id="privateInfo">
+                <em>Private</em>
+                <ul>
+                    <li><em>Time:</em> <span id="privateTime">0</span></li>
+                    <li><em>Distance:</em> <span id="privateDistance">0</span></li>
+                </ul>
+            </div>
+            <div id="publicInfo">
+                <em>Public</em>
+                <ul>
+                    <li><em>Time:</em> <span id="publicTime">0</span></li>
+                    <li><em>Distance:</em> <span id="publicDistance">0</span></li>
+                </ul>
+            </div>
+            <div id="footer">
+                <p>Seen by <span id="cameraCount">0</span> public camera(s)</p>
+            </div>
+		</div>
 	</body>
 	
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
