--- a/webroot/index.html
+++ b/webroot/index.html
@@ -12,13 +12,14 @@
 	    <a id="startButton" href="#" onclick="initAllTheThings();">Start!</a>
 		<div id="map_canvas"></div>
 		<div id="infoPanel">
-		    <div id="head">Informations:</div>
-            <div id="publicInfo">
+		    <h2>Informations:</h2>
+            <div id="totalInfo">
                 <em>Total</em>
                 <ul>
-                <li><em>Time:</em> <span id="totalTime">0</span></li>
-                <li><em>Distance:</em> <span id="totalDistance">0</span></li>
-            </ul>
+                    <li><em>Time:</em> <span id="totalTime">0</span></li>
+                    <li><em>Distance:</em> <span id="totalDistance">0</span></li>
+                </ul>
+            </div>
             <div id="privateInfo">
                 <em>Private</em>
                 <ul>
