Style imprOUUUUUUvment again²

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -12,14 +12,14 @@
 	   <a id="startButton" href="#" onclick="initAllTheThings();">Start!</a>
 		<div id="canvas"></div>
 		<div id="infoPanel">
-		    <h2>Informations:</h2>
-            <div id="totalInfo">
+		    <!--<h2>Informations:</h2>-->
+            <!--<div id="totalInfo">
                 <em>Total</em>
                 <ul>
                     <li><em>Time:</em> <span id="totalTime">0</span></li>
                     <li><em>Distance:</em> <span id="totalDistance">0</span></li>
                 </ul>
-            </div>
+            </div>-->
             <div id="privateInfo">
                 <em>Private</em>
                 <ul>
@@ -34,9 +34,7 @@
                     <li><em>Distance:</em> <span id="publicDistance">0</span></li>
                 </ul>
             </div>
-            <div id="footer">
-                <p>Seen by <span id="cameraCount">0</span> public camera(s)</p>
-            </div>
+            <footer>Seen by <span id="cameraCount">0</span> public camera(s)</footer>
 		</div>
 	</body>
 	
