--- a/webroot/index.html
+++ b/webroot/index.html
@@ -20,6 +20,7 @@
                     <li><em>Distance:</em> <span id="totalDistance">0</span></li>
                 </ul>
             </div>-->
+            <!--<div id="wrapInfo">
             <div id="privateInfo">
                 <em>Private</em>
                 <ul>
@@ -34,7 +35,27 @@
                     <li><em>Distance:</em> <span id="publicDistance">0</span></li>
                 </ul>
             </div>
-            <footer>Seen by <span id="cameraCount">0</span> public camera(s)</footer>
+            </div>
+            <footer>Seen by <span id="cameraCount">0</span> public camera(s)</footer>-->
+            <table>
+                <tr>
+                    <td id="pri">
+                        Private:<br />
+                        <span id="privateTime">0</span><br />
+                        <span id="privateDistance">0</span>
+                    </td>
+                    <td id="pub">
+                        Public:<br />
+                        <span id="publicTime">0</span><br />
+                        <span id="publicDistance">0</span>
+                    </td>
+                </tr>
+                <tr>
+                    <td id="foo" colspan="2">
+                        Seen by <span id="cameraCount">0</span> public camera(s)
+                    </td>
+                </tr>
+            </table> 
 		</div>
 	</body>
 	
