--- a/webroot/index.html
+++ b/webroot/index.html
@@ -12,40 +12,15 @@
 	   <a id="startButton" href="#" onclick="initAllTheThings();">Start!</a>
 		<div id="canvas"></div>
 		<div id="infoPanel">
-		    <!--<h2>Informations:</h2>-->
-            <!--<div id="totalInfo">
-                <em>Total</em>
-                <ul>
-                    <li><em>Time:</em> <span id="totalTime">0</span></li>
-                    <li><em>Distance:</em> <span id="totalDistance">0</span></li>
-                </ul>
-            </div>-->
-            <!--<div id="wrapInfo">
-            <div id="privateInfo">
-                <em>Private</em>
-                <ul>
-                    <li><em>Time:</em> <span id="privateTime">0</span></li>
-                    <li><em>Distance:</em> <span id="privateDistance">0</span></li>
-                </ul>
-            </div>
-            <div id="publicInfo">
-                <em>Public</em>
-                <ul>
-                    <li><em>Time:</em> <span id="publicTime">0</span></li>
-                    <li><em>Distance:</em> <span id="publicDistance">0</span></li>
-                </ul>
-            </div>
-            </div>
-            <footer>Seen by <span id="cameraCount">0</span> public camera(s)</footer>-->
             <table>
                 <tr>
                     <td id="pri">
-                        Private:<br />
+                        <span id="priTi">Private:</span><br />
                         <span id="privateTime">0</span><br />
                         <span id="privateDistance">0</span>
                     </td>
                     <td id="pub">
-                        Public:<br />
+                        <span id="priPu">Public:</span><br />
                         <span id="publicTime">0</span><br />
                         <span id="publicDistance">0</span>
                     </td>
