First attemps at refreshing the stack.

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -46,4 +46,5 @@
 	<script type="text/javascript" src="js/geoloc.js"></script>
 	<script type="text/javascript" src="js/timeline.js"></script>
 	<script type="text/javascript" src="js/ui.js"></script>
+	<script type="text/javascript" src="js/distance.js"></script>
 </html>
