--- a/webroot/index.html
+++ b/webroot/index.html
@@ -47,4 +47,5 @@
 	<script type="text/javascript" src="js/timeline.js"></script>
 	<script type="text/javascript" src="js/ui.js"></script>
 	<script type="text/javascript" src="js/distance.js"></script>
+	<script type="text/javascript" src="js/getRouteCoordinates.js"></script>
 </html>
