Better seen text.

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -26,8 +26,8 @@
                     </td>
                 </tr>
                 <tr>
-                    <td id="foo" colspan="2">
-                        Seen by <span id="cameraCount">n/a</span> public camera(s)
+                    <td id="seen" colspan="2">
+						<!-- Seen by <span id="cameraCount">n/a</span> public camera(s) -->
                     </td>
                 </tr>
             </table> 
