Landing page changing if geoloc enabled or not

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -9,7 +9,7 @@
 		<link href="css/style.css" media="screen" rel="stylesheet" type="text/css" />
 	</head>
 	
-	<body>
+	<body class="initializing">
 		<div class="landingPage">
 			<form action="#" method="POST">
 				<div class="fields">
@@ -48,11 +48,11 @@
 	<script type="text/javascript" src="js/vendors/backbone.js"></script>
 	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=true&language=fr&region=FR"></script>
 	<script type="text/javascript" src="js/script.js"></script>
+	<script type="text/javascript" src="js/geoloc.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
 	<script type="text/javascript" src="js/user.js"></script>
 	<script type="text/javascript" src="js/map.js"></script>
 	<script type="text/javascript" src="js/camera.js"></script>
-	<script type="text/javascript" src="js/geoloc.js"></script>
 	<script type="text/javascript" src="js/timeline.js"></script>
 	<script type="text/javascript" src="js/ui.js"></script>
 	<script type="text/javascript" src="js/distance.js"></script>
