Added 1st version of directions

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -11,7 +11,7 @@
 	
 	<body class="initializing">
 		<div class="landingPage">
-			<form action="#" method="POST">
+			<form id="simulation" action="#" method="POST">
 				<div class="fields">
 					<div class="field"><label for="from">From :</label><input type="text" id="from" name="from" /></div>
 					<div class="field"><label for="to">To :</label><input type="text" id="to" name="to" /></div>
