Everything now working properly.

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -13,8 +13,8 @@
 		<div class="landingPage">
 			<form id="simulation" action="#" method="POST">
 				<div class="fields">
-					<div class="field"><label for="from">From :</label><input type="text" id="from" name="from" value="88 Quai de Jemmapes, Paris"/></div>
-					<div class="field"><label for="to">To :</label><input type="text" id="to" name="to" value="15 rue Yves Toudic, Paris"/></div>
+					<div class="field"><label for="from">From :</label><input type="text" id="from" name="from" value="11 Rue Crémieux, Paris"/></div>
+					<div class="field"><label for="to">To :</label><input type="text" id="to" name="to" value="188 Boulevard Voltaire, Paris"/></div>
 				</div>
 				<button class="submit" type="submit">Start</button>
 			</form>
