--- a/webroot/index.html
+++ b/webroot/index.html
@@ -36,7 +36,7 @@
                 </tr>
                 <tr>
                     <td id="seen" colspan="2">
-						<!-- Seen by <span id="cameraCount">n/a</span> public camera(s) -->
+						Unseen yet.
                     </td>
                 </tr>
             </table> 
